--- a/poodllloader.html
+++ b/poodllloader.html
@@ -9,9 +9,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="https://cloud.poodll.com/local/cpapi/cloudstyles.css?v=029">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="https://cloud.poodll.com/local/cpapi/fastpoodllconfig.js?v=0k2"></script>
+    <script type="text/javascript" src="https://cloud.poodll.com/local/cpapi/fastpoodllconfig.js?v=002"></script>
     <script type="text/javascript" src="https://cloud.poodll.com/local/cpapi/lib/requirejs/require.js"></script>
-    <script type="text/javascript" src="https://cloud.poodll.com/local/cpapi/poodllloader.min.js?v=0at"></script>
+    <script type="text/javascript" src="https://cloud.poodll.com/local/cpapi/poodllloader.min.js?v=015"></script>
 
 
     <style type="text/css">
